Add JSON file storage and HTTP API requests